--- a/Data/Ease.Infra.Data.csproj
+++ b/Data/Ease.Infra.Data.csproj
@@ -16,7 +16,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="config.json" />
   </ItemGroup>
 </Project>
