--- a/Ease.API/Ease.API.csproj
+++ b/Ease.API/Ease.API.csproj
@@ -15,4 +15,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Data\Ease.Infra.Data.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="config.json">
+      <IncludeInPackage>false</IncludeInPackage>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
