--- a/Ease.API/config.json
+++ b/Ease.API/config.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ConnectionString": {
+  "ConnectionStrings": {
     "EaseDB": "Data Source=192.168.202.161;Initial Catalog=EaseDB;Persist Security Info=True;User ID=sa;Password=Lopes@2203"
   }
 }
