Foi necessário instalar o pacote de leitura no projeto onde consta o json.
Ease.Infra.Data

dotnet add package
Microsoft.Extensions.Configuration.Json -v 2.1.1
---------------- Comandos úteis ----------------
dotnet ef migrations add InitialMigration -v
dotnet ef migrations script
dotnet ef database update InitialMigration -v

--- a/Data/Ease.Infra.Data.csproj
+++ b/Data/Ease.Infra.Data.csproj
@@ -17,8 +17,16 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="config.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="config.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <IncludeInPackage>false</IncludeInPackage>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
